style: Redefinindo o caminho da index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="icon" href="../assets/imgs/abe-logo.png" type="image/x-icon">
+    <link rel="icon" href="./assets/imgs/abe-logo.png" type="image/x-icon">
 
 </head>
 
@@ -39,7 +39,7 @@
         <section id="home-section">
             <div class="column">
                 <div class="subtitle">
-                    <img class="logo" src="../assets/imgs/abe-logo.png" alt="logo hideograma abe">
+                    <img class="logo" src="./assets/imgs/abe-logo.png" alt="logo hideograma abe">
                     <p>Olá! Gosta de 3D e programação? <br> Veio ao lugar certo.</p>
                 </div>
 
@@ -67,7 +67,7 @@
 
             <div class="column">
                 <div class="subtitle">
-                    <img class="logo" src="../assets/imgs/abe-logo.png" alt="logo hideograma abe">
+                    <img class="logo" src="./assets/imgs/abe-logo.png" alt="logo hideograma abe">
                     <p>Skills</p>
                 </div>
 
@@ -93,7 +93,7 @@
         <section id="projects-section">
             <div class="column">
                 <div class="subtitle">
-                    <img class="logo" src="../assets/imgs/abe-logo.png" alt="logo hideograma abe">
+                    <img class="logo" src="./assets/imgs/abe-logo.png" alt="logo hideograma abe">
                     <p>Projects</p>
                 </div>
 
@@ -127,7 +127,7 @@
         <section id="cards-projects-section">
             <div class="column" id="cards-list" aria-label="Lista de projetos com cartões personalizados">
                 <div class="card">
-                    <img src="../assets/imgs/projeto1.png" alt="Projeto 1">
+                    <img src="./assets/imgs/projeto1.png" alt="Projeto 1">
                     <h2>Projeto - Bestiarius, Crie Seus Inimigos</h2>
                     <small><strong>Tecnologias</strong> <br> Java, Spring Boot, Spring Security, Flyway, Hibernate, JPA,
                         DTO, Service, HTML, CSS, JavaScript, Postgresql</small>
@@ -138,7 +138,7 @@
                     <a href="https://github.com/YuriAbe/Bestiario.git">Ver projeto</a>
                 </div>
                 <div class="card">
-                    <img src="../assets/imgs/projeto2.png" alt="Projeto 2">
+                    <img src="./assets/imgs/projeto2.png" alt="Projeto 2">
                     <h2>Projeto - Funerária Bom Descanso</h2>
                     <small><strong>Tecnologias</strong> <br> HTML, CSS, JavaScript, React Native, Firebase, Realtime
                         Database</small>
@@ -151,7 +151,7 @@
                     <a href="https://github.com/YuriAbe/funeraria-app.git">Ver projeto</a>
                 </div>
                 <div class="card">
-                    <img src="../assets/imgs/projeto3.png" alt="Projeto 3">
+                    <img src="./assets/imgs/projeto3.png" alt="Projeto 3">
                     <h2>Projeto - Lorde dos Dados</h2>
                     <small><strong>Tecnologias</strong> <br> HTML, CSS, JavaScript, Axios, OBS Studio, Node.js</small>
                     <p>Status: Finalizado</p>
@@ -162,7 +162,7 @@
                     <a href="https://github.com/Nakasat/LordeDosDados">Ver projeto</a>
                 </div>
                 <div class="card">
-                    <img src="../assets/imgs/projeto4.png" alt="Projeto 4">
+                    <img src="./assets/imgs/projeto4.png" alt="Projeto 4">
                     <h2>Projeto - Troca de Livros</h2>
                     <small><strong>Tecnologias</strong> <br> HTML, CSS, JavaScript, React Native, Async Storage</small>
                     <p>Status: Em andamento</p>
@@ -199,22 +199,22 @@
 
         <section id="contatos">
             <div class="card-contact">
-                <img src="../assets/imgs/i_email.png" alt="ícone E-mail">
+                <img src="./assets/imgs/i_email.png" alt="ícone E-mail">
                 <h3>E-mail</h3>
                 <p>yuriabe35@gmail.com</p>
             </div>
             <div class="card-contact">
-                <img src="../assets/imgs/i_telefone.png" alt="ícone Telefone">
+                <img src="./assets/imgs/i_telefone.png" alt="ícone Telefone">
                 <h3>Telefone</h3>
                 <p>(17) 99722-6349</p>
             </div>
             <div class="card-contact">
-                <img src="../assets/imgs/i_linkedin.png" alt="ícone Linkedin">
+                <img src="./assets/imgs/i_linkedin.png" alt="ícone Linkedin">
                 <h3>Linkedin</h3>
                 <p>@YuriRibeiroAbe</p>
             </div>
             <div class="card-contact">
-                <img src="../assets/imgs/i_github.png" alt="ícone Github">
+                <img src="./assets/imgs/i_github.png" alt="ícone Github">
                 <h3>Github</h3>
                 <p>@YuriAbe</p>
             </div>
