--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yuri Abe - Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./src/css/style.css">
     <!-- Importando as fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -235,10 +235,10 @@
     </script>
 </body>
 
-<script type="module" src="js/script.js"></script>
-<script type="module" src="js/home.js"></script>
-<script type="module" src="js/skills.js"></script>
-<script type="module" src="js/projects.js"></script>
-<script type="module" src="js/divertase.js"></script>
+<script type="module" src="./src/js/script.js"></script>
+<script type="module" src="./src/js/home.js"></script>
+<script type="module" src="./src/js/skills.js"></script>
+<script type="module" src="./src/js/projects.js"></script>
+<script type="module" src="./src/js/divertase.js"></script>
 
 </html>
